# lang-agent-docs-based

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  to-do.md
backend/: .flake8  CLAUDE.md  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20251110_000001_initial_schema.py  20251114_000002_add_decks_and_cards.py  20251115_000003_add_notifications_and_streak_reminders.py  20251118_000004_add_groups_tables.py  20251119_000005_add_token_usage_table.py  20251120_000006_add_exercise_history_table.py  20251120_000006_add_topics_table.py  20251120_000007_add_exercise_history_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  routers.py
backend/app/core/: __init__.py  auth.py  cache.py  config.py  db.py  errors.py  logging.py  metrics.py  middleware.py  redis.py  security.py  telegram.py  token_metrics.py  version.py
backend/app/exceptions/: domain_error.py  telegram_init_data_error.py
backend/app/models/: __init__.py  base.py  card.py  conversation.py  deck.py  exercise.py  group.py  language_profile.py  notification.py  telegram_user.py  token_usage.py  topic.py  user.py
backend/app/repositories/: __init__.py  admin.py  base.py  card.py  conversation.py  deck.py  exercise.py  group.py  language_profile.py  notification.py  profile_repository.py  stats.py  token_usage.py  topic.py  user.py  user_repository.py
backend/app/schemas/: __init__.py  admin.py  auth.py  auth_request.py  auth_response.py  card.py  deck.py  dialog.py  exercise.py  group.py  llm_responses.py  media.py  notification.py  profile.py  stats.py  topic.py  user.py
backend/app/services/: __init__.py  admin.py  auth_service.py  card.py  conversation.py  deck.py  dialog.py  dialog.py.backup  exercise.py  group.py  language_profile.py  llm.py  llm_enhanced.py  media.py  moderation.py  notification_worker.py  notifications.py  plan_limits.py  profile_service.py  prompts.py  rate_limit.py  rate_limit_service.py  rate_limit_worker.py  speech_to_text.py  stats.py  topic.py  user.py  user_service.py
backend/app/telegram/: __init__.py  bot.py  (+4 more)
backend/migrations/: README  env.py  script.py.mako
backend/tests/: conftest.py  helpers.py  test_auth.py  test_rate_limits.py  test_users_profiles.py
(+262 files in other folders)
