[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-agent-backend"
version = "0.1.0"
description = "LLM-powered language learning backend for the Telegram bot and Mini App."
readme = "../README.md"
requires-python = ">=3.11"
authors = [
  { name = "Lang Agent Team", email = "dev@lang-agent.local" },
]
license = { text = "Proprietary" }
dependencies = [
  "alembic==1.13.1",
  "asyncpg==0.29.0",
  "fastapi==0.110.0",
  "httpx==0.26.0",
  "openai==1.12.0",
  "prometheus-fastapi-instrumentator==7.1.0",
  "passlib[bcrypt]==1.7.4",
  "pyjwt[crypto]==2.8.0",
  "pydantic==2.6.3",
  "pydantic-settings==2.2.1",
  "python-telegram-bot[webhooks]==20.8",
  "python-multipart==0.0.9",
  "redis==5.0.1",
  "sqlalchemy==2.0.27",
  "tenacity==8.2.3",
  "uvicorn[standard]==0.27.1",
]

[project.optional-dependencies]
dev = [
  "anyio==4.2.0",
  "coverage[toml]==7.4.1",
  "factory-boy==3.3.0",
  "faker==19.13.0",
  "mypy==1.8.0",
  "pytest==8.1.1",
  "pytest-asyncio==0.23.5",
  "pytest-cov==4.1.0",
  "ruff==0.2.1",
  "types-redis==4.6.0.20240218",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["app", "tests"]
known_first_party = ["app"]
combine_as_imports = true

[tool.ruff]
src = ["app", "tests"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "ANN", "S", "C90"]
ignore = ["ANN101", "ANN102"]
fixable = ["E", "F", "I", "W", "B", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"backend/tests/*" = ["S101"]
"app/api/routes/*" = ["B008"]
"app/core/auth.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
  "prometheus_client",
  "prometheus_fastapi_instrumentator",
  "prometheus_fastapi_instrumentator.*",
  "prometheus_client.openmetrics",
  "prometheus_client.openmetrics.exposition",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "telegram",
  "telegram.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
